<?xml version ="1.0" encoding="utf-8"?>
<shortcuts xmlns:android="http://schemas.android.com/apk/res/android">
    <!-- Add shortcuts that launch your app to a specific screen or task. -->
    <!-- Learn more at https://developer.android.com/guide/topics/ui/shortcuts/creating-shortcuts -->
    <!-- <shortcut android:shortcutId="SHORTCUT_ID" -->
    <!--     android:enabledd="true" -->
    <!--     android:shortcutShortLabel="SHORTCUT_SHORT_LABEL" -->
    <!--     android:shortcutLongLabel="SHORTCUT_LONG_LABEL" -->
    <!--     android:shortcutDisabledMessage="SHORTCUT_DISABLED_MESSAGE"> -->
    <!--     <intent -->
    <!--         android:action="android.intent.action.VIEW" -->
    <!--         android:targetClass="REPLACE_IT_WITH_FULL_QUALIFIED_CLASS" -->
    <!--         android:targetPackage="REPLACE_IT_WITH_TARGET_PACKAGE" /> -->
    <!-- </shortcut> -->

    <!-- Integrate with Google Assistant App Actions for launching your app with various voice commands. -->
    <!-- Learn more at: https://developers.google.com/assistant/app/overview -->
    <!-- <capability android:name="actions.intent.OPEN_APP_FEATURE"> -->
    <!--     Provide query fulfillment instructions for this capability, or bind it to a shortcut. -->
    <!--     Learn more at: https://developers.google.com/assistant/app/action-schema -->
    <!-- </capability> -->
    <shortcut
        android:enabled="true"
        android:icon="@mipmap/ic_launcher"
        android:shortcutLongLabel="@string/first_long"
        android:shortcutShortLabel="@string/first_short"
        android:shortcutId="first">

        <intent
            android:action="android.intent.action.VIEW"
            android:targetClass="com.zzz.myactivityapplication.ActStartActivity"
            android:targetPackage="com.zzz.myactivityapplication" />
        <categories android:name="android.shortcut.conversation" />
    </shortcut>

    <shortcut
        android:enabled="true"
        android:icon="@mipmap/ic_launcher"
        android:shortcutLongLabel="@string/second_long"
        android:shortcutShortLabel="@string/second_short"
        android:shortcutId="second">

        <intent
            android:action="android.intent.action.VIEW"
            android:targetClass="com.zzz.myactivityapplication.StartupmodeActivity"
            android:targetPackage="com.zzz.myactivityapplication" />
        <categories android:name="android.shortcut.conversation" />
    </shortcut>

    <shortcut
        android:enabled="true"
        android:icon="@mipmap/ic_launcher"
        android:shortcutLongLabel="@string/third_long"
        android:shortcutShortLabel="@string/third_short"
        android:shortcutId="third">

        <intent
            android:action="android.intent.action.VIEW"
            android:targetClass="com.zzz.myactivityapplication.IntentActivity"
            android:targetPackage="com.zzz.myactivityapplication" />
        <categories android:name="android.shortcut.conversation" />
    </shortcut>

</shortcuts>